--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
- #CenterElements
+     #CenterElements
          {
          position: absolute;
          transform: translate(-50%, -50%);
@@ -51,3 +51,31 @@
          }
          #DiscordServer
          {
+         position: absolute;
+         text-align: center;
+         font-family: 'Raleway', sans-serif;
+         transform: translateX(-50%);
+         left: 50%;
+         top: 60%;
+         }
+         a.Code
+         {
+         color: #93a1a1;
+         position: absolute;
+         text-align: center;
+         transform: translateX(-50%);
+         left: 50%;
+         top: 80%;
+         transition: all .4s;
+         }
+         a.Code:hover
+         {
+         color: rgb(255, 255, 255);
+         transform: scale(1.3);
+         }
+         body
+         {
+         color: #93a1a1;
+         background-color: #002b36;
+         margin: 0;
+         }
