--- a/css/styles.css
+++ b/css/styles.css
@@ -1,89 +1,74 @@
-/* Copyright (C) 2020 Theodore Robinson - All Rights Reserved
-* You may use, distribute and modify this code under the
-* terms of the MIT license.
-*
-* You should have received a copy of the MIT license with
-* this file, if not please visit: https://opensource.org/licenses/mit
-*/
-/* Credits to Synergy @ SynergyDev.tk */
-#CenterElements
-         {
-         position: absolute;
-         transform: translate(-50%, -50%);
-         left: 50%;
-         top: 50%;
-         }
-         #CenterTitle
-         {
-         font-size: 48px;
-         font-family: 'Permanent Marker', cursive;
-         }
-         #CenterLinks
-         {
-         display: flex;
-         flex-direction: row;
-         justify-content: space-around;
-         align-items: center;
-         font-size: 24px;
-         }
-         #CenterText
-         {
-         font-family: 'Raleway', sans-serif;
-         }
-         a
-         {
-         text-decoration: none;
-         }
-         p.CenterLinkDisabled
-         {
-         color: #073642;
-         }
-         a.CenterLink
-         {
-         color: #93a1a1;
-         transition: all .4s
-         }
-         a.CenterLink:hover
-         {
-         color: rgb(255, 255, 255);
-         transform: scale(1.3);
-         }
-         a.SubtitleLink
-         {
-         transition: all .2s;
-         color: rgb(200, 200, 200);
-         }
-         a.SubtitleLink:hover
-         {
-         color: rgb(255, 255, 255);
-         }
-         #DiscordServer
-         {
-         position: absolute;
-         text-align: center;
-         font-family: 'Raleway', sans-serif;
-         transform: translateX(-50%);
-         left: 50%;
-         top: 60%;
-         }
-         a.Code
-         {
-         color: #93a1a1;
-         position: absolute;
-         text-align: center;
-         transform: translateX(-50%);
-         left: 50%;
-         top: 80%;
-         transition: all .4s;
-         }
-         a.Code:hover
-         {
-         color: rgb(255, 255, 255);
-         transform: scale(1.3);
-         }
-         body
-         {
-         color: #93a1a1;
-         background-color: #002b36;
-         margin: 0;
-         }
+/*************************************************************************\
+***************************************************************************
+*** Copyright (C) 2020 Theodore Robinson - All Rights Reserved          ***
+*** You may use, distribute and modify this code under the              ***  
+*** terms of the MIT license.                                           ***
+***                                                                     ***
+*** You should have received a copy of the MIT license with             ***
+*** this file, if not please visit: https://opensource.org/licenses/mit ***
+***************************************************************************
+\*************************************************************************/
+body {
+  color: #93a1a1;
+  background-color: #002b36;
+  margin: 0;
+  font-family: 'Raleway', sans-serif;
+}
+#CenterElements {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+}
+#CenterTitle {
+  font-size: 48px;
+  font-family: 'Permanent Marker', cursive;
+}
+#CenterLinks {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 24px;
+a {
+  text-decoration: none;
+}
+p.CenterLinkDisabled {
+  color: #073642;
+}
+a.CenterLink {
+  color: #93a1a1;
+  transition: all .4s
+}
+a.CenterLink:hover {
+  color: rgb(255, 255, 255);
+  transform: scale(1.3);
+}
+a.SubtitleLink {
+  transition: all .2s;
+  color: rgb(200, 200, 200);
+}
+a.SubtitleLink:hover {
+  color: rgb(255, 255, 255);
+}
+  #DiscordServer {
+  position: absolute;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  transform: translateX(-50%);
+  left: 50%;
+  top: 60%;
+}
+a.Code {
+  color: #93a1a1;
+  position: absolute;
+  text-align: center;
+  transform: translateX(-50%);
+  left: 50%;
+  top: 80%;
+  transition: all .4s;
+}
+  a.Code:hover {
+  color: rgb(255, 255, 255);
+  transform: scale(1.3);
+}
